# arml-sdk

./: .gitignore  LICENSE  README.md
.github/workflows/: publish-pages.yml
NativePlugins/BNO055/Android/: i2cpermission
NativePlugins/BNO055/Android/jni/: BNO055.cpp  BNO055.h
NativePlugins/BNO055/Arduino/: BNO055.ino
NativePlugins/NativePluggins/BNO055/Android/: build.sh
NativePlugins/NativePluggins/Oak-D/Linux/: CMakeLists.txt
NativePlugins/NativePluggins/Oak-D/Linux/src/: oakd_motion.cpp
NativePlugins/NativePluggins/Realsense/Android/: build.sh
NativePlugins/NativePluggins/Realsense/Linux/: CMakeLists.txt
NativePlugins/Oak-D/Linux/: linting_script.sh
NativePlugins/Realsense/Android/jni/: Android.mk  Application.mk
arml-arduino/: arml-arduino.ino
arml-unity/: .gitignore  README.md
arml-unity/Assets/: DefaultPrefabObjects.asset  UserChoices.choices
arml-unity/Assets/ARML/ARMLCore/: ARMLCore.asmdef
arml-unity/Assets/Settings/Build Profiles/: Linux AppLauncher.asset  Linux AprilTags (Lab).asset  Linux GarumGame.asset  Linux HelloWorld.asset  Linux WallGame.asset
arml-unity/ProjectSettings/: EditorBuildSettings.asset  GraphicsSettings.asset  ProjectSettings.asset  TagManager.asset
arml-utils/: .gitignore  environment.yml  record-oak.sh  record-orbbec.sh
arml-website/: .env.example  .gitignore  README.md  docfx.json  docusaurus.config.js  filterConfig.yml  package-lock.json  package.json  toc.yml
arml-website/docs/: attribution.md  components.md  configuration.md  features.md  garumgame.md  hardware.md  index.md  installation.md  launcher.md  os.md  peripherals.md  power.md  projector.md  scriptreference.md  toc.yml  wallgame.md  who.md  wiring.md  workflow.md
arml-website/docs/SDK/: index.md
arml-website/docs/SDK/examples/: GarumGame.md  WallGame.md  index.md
arml-website/docs/SDK/overview/: Logic.md  index.md
arml-website/media/: branding.yml  models.yml  posters.yml  toc.yml
arml-website/media/assets/glb/: battery_panel.glb  bezel_camera.glb  bezel_speaker_left.glb  bezel_speaker_right.glb  button_cap.glb  button_panel.glb  grille_speaker_left.glb  grille_speaker_right (2).glb  grille_speaker_right.glb  grille_vent_left.glb  grille_vent_right.glb  handle.glb  logo_window.glb  support_camera.glb  support_pcb.glb
arml-website/src/css/: custom.css
arml-website/template/: ManagedReference.html.primary.js  ManagedReference.html.primary.tmpl  media.html.js  media.html.tmpl
arml-website/template/layout/: _master.tmpl
arml-website/template/partials/: class.header.tmpl.partial  mediacard.tmpl.partial
arml-website/template/public/: main.css
arml-website/template/schemas/: Media.schema.json
unity-arml-sdk/Assets/Animations/Controllers/: Fishmonger_AnimCont.controller  GarumCook_AnimCont.controller
unity-arml-sdk/Assets/Animations/Masks/: Right_Arm_Mask.mask
unity-arml-sdk/Assets/Animations/Mixamo/: Idle.anim  Walking.anim
unity-arml-sdk/Assets/Audio/Mixer/: CharacterVoice.mixer
unity-arml-sdk/Assets/DialogueSystem/Scripts/: DSDialogue.cs
unity-arml-sdk/Assets/Fonts/: Inter-Bold SDF.asset  Inter-Regular SDF.asset
unity-arml-sdk/Assets/Maps/: Garum_Scan.mat  Material_0 1.mat  garum_scan.fbx  garum_scan_wall_collision.fbx
unity-arml-sdk/Assets/Maps/Materials/: garum_game_area.mat
unity-arml-sdk/Assets/Materials/: Fog-PNG.mat  M_Stencil.mat  M_Trail.mat  M_Water.mat
unity-arml-sdk/Assets/Materials/Interactables/: M_Placeable.mat
unity-arml-sdk/Assets/Models/: New Lantern.fbx
unity-arml-sdk/Assets/Rendering/: New Lighting Settings.lighting  Universal Render Pipeline Asset.asset  Universal Render Pipeline Asset_Renderer.asset
unity-arml-sdk/Assets/Resources/: M_Outline.mat
unity-arml-sdk/Assets/Scenes/: Logic.unity
unity-arml-sdk/Assets/Scripts/: FreePlacementObject.cs
unity-arml-sdk/Assets/Shaders/: RenderBehind-Unlit.shader
unity-arml-sdk/ProjectSettings/: EditorBuildSettings.asset  GraphicsSettings.asset  InputManager.asset  NavMeshAreas.asset  ProjectSettings.asset  QualitySettings.asset  TagManager.asset
(+729 files in other folders)
